added file count for each file type